kube/ingresses/app-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/use-port-in-redirects: "true"
  namespace: default
spec:
  rules:
    - host: rails.local
      http:
        paths:
          - path: /
            backend:
              serviceName: rails-service
              servicePort: 3000
